--- a/src/app/product/product-create/product-create.component.scss
+++ b/src/app/product/product-create/product-create.component.scss
@@ -48,6 +48,10 @@
   flex: 50%;
   display: flex;
   flex-direction: column;
-  justify-content: flex-start;
+  justify-content: space-between;
   align-items: center;
+  padding: 1rem;
+  overflow-y: auto;
+  overflow-x: hidden;
+  height: 85vh;
 }
