--- a/src/app/shared/product/product-card-long/product-card-long.component.scss
+++ b/src/app/shared/product/product-card-long/product-card-long.component.scss
@@ -1,34 +1,38 @@
 .hero {
   padding: 0;
   margin: 0;
-  display: block;
-  width: 25rem;
-  height: 32rem;
+  display: flex;
+  width: 40rem;
+  height: 12rem;
   border: none;
   border-radius: 0.8125rem;
 
   box-shadow: 1px 1px 8px 1px #00000040;
 }
 
-.product-image {
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 60%;
+.hero-image {
+  flex: 30%;
+  display: flex;
+  height: 100%;
+  width: 20%;
+  justify-content: center;
+  align-items: center;
   img {
-    top: 0;
-    left: 0;
     width: 100%;
     height: 100%;
     object-fit: cover;
-    border-radius: 0.8125rem 0.8125rem 0rem 0rem;
+    border-radius: 0.8125rem 0rem 0rem 0.8125rem;
   }
+}
+
+.hero-details {
+  flex: 70%;
 }
 
 .product-name {
   font-family: 'Fira Code';
   font-weight: 600;
-  font-size: large;
+  font-size: 1.1rem;
   color: black;
   margin: 0.8rem 0 0 0.8rem;
   word-wrap: break-word;
@@ -39,9 +43,20 @@
 .product-category {
   font-family: 'Fira Code';
   font-weight: 600;
-  font-size: large;
+  font-size: 1.05rem;
   color: #6d6d6d;
   margin: 0.6rem 0 0 0.8rem;
+}
+
+.product-small-description {
+  font-family: 'Fira Code';
+  font-weight: 600;
+  font-size: 0.8rem;
+  color: #6d6d6d;
+  margin: 0.8rem 0 0 0.8rem;
+  word-wrap: break-word;
+  overflow-wrap: break-word;
+  line-height: 1.38rem;
 }
 
 .product-ratings {
@@ -56,7 +71,7 @@
     font-family: 'Fira Code';
     margin: 0.5rem 1rem;
     font-weight: 600;
-    font-size: medium;
+    font-size: 1.05rem;
     color: black;
     padding-top: 0.3rem;
   }
@@ -78,7 +93,7 @@
   border-left: 0.3em solid transparent;
 
   /* Controlls the size of the stars. */
-  font-size: medium;
+  font-size: 1.05rem;
 
   &:before,
   &:after {
@@ -120,7 +135,7 @@
   border-left: 0.3em solid transparent;
 
   /* Controlls the size of the stars. */
-  font-size: medium;
+  font-size: 1.05rem;
 
   &:before,
   &:after {
@@ -143,40 +158,5 @@
 
   &:after {
     transform: rotate(35deg);
-  }
-}
-
-.product-actions {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  align-content: center;
-  margin-top: 1rem;
-  .wishlist-btn {
-    height: 3.8rem;
-    width: 12.4rem;
-    display: flex;
-    border: none;
-    border-radius: 2.06rem;
-    background: #8103ff;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-    justify-content: center;
-    align-items: center;
-    align-content: center;
-
-    .wishlist-btn-text {
-      font-family: Fira Code;
-      font-style: normal;
-      font-weight: 600;
-      font-size: large;
-      color: white;
-      margin-right: 0.5rem;
-      padding-bottom: 0.25rem;
-    }
-    .wishlist-btn-icon {
-      mat-icon {
-        color: white;
-      }
-    }
   }
 }
