--- a/src/app/product/product-create/product-create.component.html
+++ b/src/app/product/product-create/product-create.component.html
@@ -178,9 +178,9 @@
       actionName="Wishlist"
       actionIcon="favorite"
     ></app-product-card-small>
-    <app-product-card-long
+    <!-- <app-product-card-long
       [productDetails]="productCardLongDetails"
-    ></app-product-card-long>
+    ></app-product-card-long> -->
   </div>
 </div>
 <app-loader *ngIf="!categories"></app-loader>
