--- a/src/app/shared/charts/bar-line-chart/bar-line-chart.component.html
+++ b/src/app/shared/charts/bar-line-chart/bar-line-chart.component.html
@@ -1,3 +1,15 @@
-<canvas id="pending-chart"></canvas>
-<canvas id="accepted-chart"></canvas>
-<canvas id="canceled-chart"></canvas>
+<div class="hero">
+  <div class="hero-row-1">
+    <div class="pending">
+      <canvas id="pending-chart"></canvas>
+    </div>
+    <div class="accepted">
+      <canvas id="accepted-chart"></canvas>
+    </div>
+  </div>
+  <div class="hero-row-2">
+    <div class="canceled">
+      <canvas id="canceled-chart"></canvas>
+    </div>
+  </div>
+</div>
