--- a/src/app/product/product-update/product-update.component.html
+++ b/src/app/product/product-update/product-update.component.html
@@ -135,9 +135,9 @@
       actionName="Wishlist"
       actionIcon="favorite"
     ></app-product-card-small>
-    <app-product-card-long
+    <!-- <app-product-card-long
       [productDetails]="productCardLongDetails"
-    ></app-product-card-long>
+    ></app-product-card-long> -->
   </div>
 </div>
 <app-loader *ngIf="!productDetails || !categories"></app-loader>
