image error solved

--- a/src/app/shared/product/product-card-small/product-card-small.component.html
+++ b/src/app/shared/product/product-card-small/product-card-small.component.html
@@ -63,6 +63,7 @@
         : 'assets/statics/product-image.jpg'
     "
     [alt]="productDetails.name"
+    style="max-height: 200px"
   />
   <mat-card-content>
     <div class="flex">
