Chat module added

--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -24,7 +24,9 @@
     <button mat-menu-item routerLink="product" routerLinkActive="mat-accent">
       <mat-icon> inventory_2</mat-icon> <span>Product</span>
     </button>
-
+    <button mat-menu-item routerLink="chat/list" routerLinkActive="mat-accent">
+      <mat-icon> chat</mat-icon> <span>Chats</span>
+    </button>
     <button
       mat-menu-item
       routerLink="profile/profile-view"
